# skills

./: LICENSE
axum-single-page-ui/: SKILL.md
feishu/: SKILL.md
feishu/agents/: openai.yaml
frontend-design/: SKILL.md
git-ops/: SKILL.md
git-ops/references/: git-ops.md
gui-automation/: SKILL.md
macos-gui-automation/: SKILL.md
mermaid/: SKILL.md
mermaid/agents/: openai.yaml
mermaid/references/: mermaid-notes.md
npm/: SKILL.md
playright/: SKILL.md
python/: SKILL.md
python-uv/: SKILL.md
python-uv/references/: pyproject.toml
python/references/: patterns.md
rust-coding-style/: SKILL.md
youtrack/: SKILL.md
